Update project from 'agents-common' Copier template (HEAD).

--- a/.auxiliary/configuration/copier-answers--agents.yaml
+++ b/.auxiliary/configuration/copier-answers--agents.yaml
@@ -1,5 +1,5 @@
 # Changes here will be overwritten by Copier
-_commit: v1.0a5-7-g6e59ef6
+_commit: v1.0a5-9-gd637880
 _src_path: gh:emcd/agents-common
 coders:
 - claude
